# lyrsmith

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
packaging/: AppImageBuilder.yml.tmpl
scripts/: build_appimage.sh  build_conjunctions.py  try_aligner.py
src/lyrsmith/: __main__.py  app.py  config.py  debug.py  keybinds.py  lrc.py  word_align.py
src/lyrsmith/audio/: decoder.py  player.py  waveform.py
src/lyrsmith/metadata/: cache.py  disk_cache.py  tags.py
src/lyrsmith/transcribe/: splitter.py  whisper.py
src/lyrsmith/ui/: _fast_list_view.py  bottom_bar.py  config_modal.py  edit_line_modal.py  error_modal.py  file_browser.py  file_info.py  global_offset_modal.py  help_modal.py  indicator_segment.py  left_pane.py  lyrics_editor.py  prompt_modal.py  top_bar.py  unsaved_modal.py  (+1 more)
tests/: test_app_smoke.py  test_cache.py  test_config.py  test_decoder.py  test_disk_cache.py  test_e2e_transcription.py  test_edit_utils.py  test_fmt_key.py  test_keybinds.py  test_lrc.py  test_lrc_ops.py  test_main.py  test_pilot_integration.py  test_tags.py  test_waveform.py  test_whisper.py  test_word_align.py
tests/fixtures/: tts_sample.flac
tests/integration/: _helpers.py  conftest.py  test_active_line_highlight.py  test_app_smoke.py  test_config_modal.py  test_edit_line_decoupling.py  test_file_browser.py  test_global_offset_modal.py  test_lrc_editor.py  test_pane_navigation.py  test_playback_routing.py  test_prompt_modal.py  test_save_flow.py  test_selection_copy.py  test_transcription.py  test_undo.py  test_waveform.py  test_word_data.py
(+34 files in other folders)
